# Estatistica-Aplicada

./: Dockerfile  README.md  angular.json  app.py  index.html  package-lock.json  package.json  pom.xml  pyproject.toml  qualidade.py  requirements.txt  rotatividade.csv  testes.ipynb
frontend/: tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/produto/[id]/: page.tsx
frontend/src/components/produto/: ProdutoItem.tsx
frontend/src/core/constants/: index.ts
frontend/src/core/produto/: Especificacoes.ts  Precificavel.ts  Produto.ts
projeto-produtos/: README.md
projeto-produtos/src/app/: app.component.spec.ts  app.component.ts
projeto-produtos/src/app/components/home/: home.component.css  home.component.html  home.component.ts
src/: index.html
src/app/components/home/: home.component.css
src/main/java/com/danielfreitassc/dslist/: DslistApplication.java
src/main/java/com/danielfreitassc/dslist/models/: GameEntity.java
src/main/resources/: application-test.yml  application.yml
src/test/java/com/danielfreitassc/dslist/: DslistApplicationTests.java
