[tool.poetry]
name = "rotatividade"
version = "0.1.0"
description = ""
authors = ["danielfreitassc <danielfreitassc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
flask = "^3.1.0"
flask-cors = "^5.0.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
